==============
AS OF 20251218
==============

- Permit js=-2 for any stream operation.

==============
AS OF 20250930
==============

- Add GetLastGT.

==============
AS OF 20250525
==============

- Add Linux support: CalinsNetMex.mexa64.

==============
AS OF 20250325
==============

- Add waveplayer example scripts and waveform.

==============
AS OF 20241215
==============

- GetParamsOneBox takes (... ip, slot).
- SetParamsOneBox takes (... ip, slot).
- SetDigOut replaced by NI_DO_Set.
- Add NI_Wave_Arm.
- Add NI_Wave_Load.
- Add NI_Wave_StartStop.
- Add OBX_AO_Set.
- Add OBX_Wave_Arm.
- Add OBX_Wave_Load.
- Add OBX_Wave_StartStop.
- Add PauseGraphs.

==============
AS OF 20240129
==============

- Allow remote fetch of filtered IM stream.

==============
AS OF 20230425
==============

New functions
-------------
GetGeomMap
GetProbeList
SetAnatomy_Pinpoint

==============
AS OF 20230411
==============

- Fecthes returning zero samples do not generate warnings.

==============
AS OF 20230202
==============

- GetStreamShankMap can only be used on NI stream (js = 0) because imec
ShankMaps are for internal use only. They will be replaced by geomMap.

- "Onebox" -> "OneBox"

==============
AS OF 20220101
==============

- Add 'LatencyTest.m' demo file.

- Retire 32-bit MATLAB support.

- Streamline CalinsNetMex.

- Simplify error handling.

- Users must reinstall @SpikeGL and CalinsNetMex.mexw64.

- Formerly streams were referenced by the single parameter streamID: {-1=nidq, 0+=imec-probe}.
Henceforth two parameters (js, ip) are used to select an expanded variety of streams:
- js: stream type: {0=nidq, 1=obx, 2=imec-probe}.
- ip: substream:   {0=nidq (if js=0), 0+=which OneBox or imec probe}.
Examples (js, ip):
(0, 0) = nidq.	// for nidq, ip is arbitrary but zero by convention
(1, 4) = obx4.
(2, 7) = imec7.
Note: ip has range [0..np-1], where, np is queried using GetStreamNP().

Affected functions
------------------
Fetch
FetchLatest