@@ -173,10 +173,17 @@
 %     Any selected OneBox can also be referenced by setting
 %     ip = -1, and giving its slot index.
 %
+% list = GetProbeAdrrs( myobj )
+%
+%     Get string with format: (probeID,slot,port,dock)...
+%     - A parenthesized entry for each selected probe.
+%     - probeID: zero-based integer assigned by 'Detect'.
+%     - {slot,port,dock}: where probe is plugged in.
+%     - If no probes, return '()'.
+%
 % list = GetProbeList( myobj )
 %
-%     Get string with format:
-%     (probeID,nShanks,partNumber)()...
+%     Get string with format: (probeID,nShanks,partNumber)...
 %     - A parenthesized entry for each selected probe.
 %     - probeID: zero-based integer.
 %     - nShanks: integer {1,4}.
@@ -357,7 +364,7 @@
 % myobj = OBX_AO_Set( myobj, ip, slot, 'chn_vlt' )
 %
 %     Set one or more OneBox AO (DAC) channel voltages.
-%     - chn_vlt is a string with format: (chan,volts)(chan,volts)...()
+%     - chn_vlt is a string with format: (chan,volts)...(chan,volts)
 %     - The chan values are integer AO indices in range [0,11].
 %     - You can only use AO channels already listed on the OBX setup tab.
 %     - Voltages are double values in range [-5.0,5.0] V.
@@ -464,7 +471,7 @@
 % myobj = SetAnatomy_Pinpoint( myobj, 'shankdat' )
 %
 %     Set anatomy data string with Pinpoint format:
-%     [probe-id,shank-id](startpos,endpos,R,G,B,rgnname)(startpos,endpos,R,G,B,rgnname)...()
+%     [probe-id,shank-id](startpos,endpos,R,G,B,rgnname)...(startpos,endpos,R,G,B,rgnname)
 %        - probe-id: SpikeGLX logical probe id.
 %        - shank-id: [0..n-shanks].
 %        - startpos: region start in microns from tip.
